# Naufrago

./: Makefile  Makefile.in  README.txt  config.h.in  configure  configure.ac  configure.scan  install.sh
autom4te.cache/: output.0  requests  traces.0
doc/src/: Relatorio.tex  Relatorio.tex~
src/: Makefile  animacao.c  animacao.h  asimov.c  asimov.h  bote.c  bote.h  colisoes.c  colisoes.h  constantes.h  coral.c  coral.h  estado_inicial.c  estado_inicial.h  gera_animacao.c  gera_animacao.h  imprime_estado_atual.c  imprime_estado_atual.h  imprime_informacoes.c  imprime_informacoes.h  jogo.c  jogo.h  main.c  minunit.c  movimenta_elementos.c  movimenta_elementos.h  naufrago.c  naufrago.h  teclas.c  teclas.h  visualizacao_grafica.c  visualizacao_grafica.h
